ELAN: Add support for non-turn-based (freeform annotation only) deserialization. (And update Double object syntax)